[gd_scene load_steps=9 format=2]

[ext_resource path="res://bat/bat.png" type="Texture" id=1]
[ext_resource path="res://bat.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "idle_flap"
length = 0.35
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 1, 2 ]
}

[sub_resource type="Animation" id=2]
resource_name = "left_flap "
length = 0.35
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 14 ]
}

[sub_resource type="Animation" id=3]
resource_name = "right_flap"
length = 0.35
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 6 ]
}

[sub_resource type="CapsuleShape2D" id=6]

[sub_resource type="CircleShape2D" id=5]
radius = 124.258

[sub_resource type="CapsuleShape2D" id=7]
radius = 1.0

[node name="bat" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.40625, 2.40625 )
texture = ExtResource( 1 )
hframes = 4
vframes = 4
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle_flap = SubResource( 1 )
"anims/left_flap " = SubResource( 2 )
anims/right_flap = SubResource( 3 )

[node name="hit_1" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_1"]
shape = SubResource( 6 )

[node name="player_detector" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detector"]
position = Vector2( 3, -2 )
shape = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, -5 )
shape = SubResource( 7 )

[connection signal="body_entered" from="hit_1" to="." method="_on_hit_1_body_entered"]
[connection signal="body_entered" from="player_detector" to="." method="_on_player_detector_body_entered"]
